Policy Cilium l7/Policy Cilium l7/ad-policy-lv7.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "rule-ad-lv7"
spec:
  description: "L7 policy for the adservice"
  endpointSelector:
    matchLabels:
      app: adservice
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: frontend  
    toPorts:
    - ports:
      - port: "9555"
        protocol: TCP
      rules:
        http:
        - method: "POST"
          path: "/hipstershop.AdService/GetAds" 
  egress:
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": kube-system
        "k8s:k8s-app": kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: ANY
      rules:
        dns:
        - matchPattern: "*.default.svc.cluster.local"
