Policy Cilium l7/Policy Cilium l7/cart-policy-lv7.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "rule-cart-lv7"
spec:
  description: "L7 policy for the cartservice"
  endpointSelector:
    matchLabels:
      app: cartservice
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: frontend
    toPorts:
    - ports:
      - port: "7070"
        protocol: TCP
      rules:
        http:
        - method: "POST"
          path: "/grpc.health.v1.Health/Check"
        - method: "POST"
          path: "/hipstershop.CartService/GetCart"  
        - method: "POST"
          path: "/hipstershop.CartService/EmptyCart"
        - method: "POST"
          path: "/hipstershop.CartService/AddItem"
  - fromEndpoints:
    - matchLabels:
        app: checkoutservice
    toPorts:
    - ports:
      - port: "7070"
        protocol: TCP
      rules:
        http:
        - method: "POST"
          path: "/hipstershop.CartService/GetCart"  
        - method: "POST"
          path: "/hipstershop.CartService/EmptyCart"
  egress:
  - toEndpoints:
    - matchLabels:
        app: redis-cart
    toPorts:
    - ports:
      - port: "6379"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": kube-system
        "k8s:k8s-app": kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: ANY
      rules:
        dns:
        - matchPattern: "*.default.svc.cluster.local"
