Policy Cilium l7/Policy Cilium l7/email-policy-lv7.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "rule-email-lv7"
spec:
  description: "L7 policy for the emailservice"
  endpointSelector:
    matchLabels:
      app: emailservice
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: checkoutservice
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
      rules:
        http:
        - method: "POST"
          path: "/hipstershop.EmailService/SendOrderConfirmation"
  egress:
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": kube-system
        "k8s:k8s-app": kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: ANY
      rules:
        dns:
        - matchPattern: "*.default.svc.cluster.local"
